--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -118,6 +118,13 @@ azure_identity = { version = "0.31", optional = true, features = ["client_certif
 azure_core = { version = "0.31", optional = true }
 base64 = { version = "0.22.1", optional = true }
 
+# Only needed for AWS IAM authentication
+aws-sigv4 = { version = "1", optional = true, features = ["http1"] }
+aws-credential-types = { version = "1", optional = true }
+aws-config = { version = "1", optional = true }
+aws-smithy-runtime-api = { version = "1", optional = true }
+http = { version = "1", optional = true }
+
 [features]
 default = ["acl", "streams", "geospatial", "script", "num-bigint"]
 acl = []
@@ -151,6 +158,7 @@ r2d2 = ["dep:r2d2"]
 bb8 = ["dep:bb8"]
 token-based-authentication = ["dep:futures-util", "dep:log"]
 entra-id = ["dep:azure_identity", "dep:azure_core", "dep:base64", "token-based-authentication", "tokio-comp"]
+aws-iam = ["dep:aws-sigv4", "dep:aws-credential-types", "dep:aws-config", "dep:aws-smithy-runtime-api", "dep:http", "token-based-authentication", "tokio-comp"]
 
 # Instead of specifying "aio", use either "tokio-comp" or "smol-comp".
 aio = [
